--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@
     
     .item-pic img {
         width: 100%;
-        height: 11.927vw;
+        height: auto;
     }
     
     .feature-card-name {
