--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,8 @@
     
     .item-pic img {
         width: 100%;
-        height: auto;
+        height: 100%;
+        object-fit: contain;
     }
     
     .feature-card-name {
