--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,9 @@
         opacity: 1;
     }
     /* ---------------------------------    ROUND ARROW BTN    ------------------------------------------ */
-    
+    .sc-top{
+        top: 50% !important;
+    }
     .arrow {
         top: 50%;
         width: 2.396vw;
