--- a/css/queries.css
+++ b/css/queries.css
@@ -1,257 +1,274 @@
-/* // `sm` applies to x-small devices (portrait phones, less than 576px) */
-
-@media (max-width: 575.98px) {
-    * {
-        font-size: 2.778vw;
+    /* // `xxl` applies to x-large devices (large desktops, less than 1400px) */
+    
+    @media (max-width: 1399.98px) {
+        * {
+            font-size: .833vw;
+        }
+        .profile li a p,
+        a.nav-link,
+        .store-address span.c-green,
+        .store-address .text-muted,
+        .off {
+            font-size: 1.2rem;
+        }
+        .store-address .strong {
+            font: normal normal 400 1rem "Poppins";
+        }
+        .cc-img {
+            height: 6.5rem;
+        }
+        .shop-by-category strong {
+            font-size: 1.5rem;
+        }
     }
-    .cc-img {
-        height: 11rem;
+    
+    @media (max-width: 991.98px) {
+        .search input[type=text],
+        .search input[placeholder],
+        .location p,
+        .lead-product,
+        .profile li a p,
+        .feature-item,
+        .store-address .strong,
+        .view-all-btn,
+        .date,
+        .user {
+            font-size: 1.3rem;
+        }
+        .feature-card-name,
+        a.nav-link,
+        a.read-more:link,
+        a.read-more:visited {
+            font-size: 1.4rem;
+        }
+        .item-details li img {
+            width: 1.8rem;
+        }
+        .review,
+        .price p del {
+            font-size: 1.5rem;
+        }
+        .off {
+            width: 60px;
+            height: 22px;
+            font-size: 1.5rem;
+        }
+        .stories .card-title {
+            font-size: 1.5rem;
+        }
+        .data-search {
+            font-size: 1.3rem;
+        }
+        .footer a {
+            font-size: 1.2rem;
+        }
+        .copyright {
+            font-size: 1.3rem;
+        }
+        .arrow {
+            display: block;
+        }
     }
-    .shop-by-category .card-body strong {
-        font-size: 3rem;
+    
+    @media (max-width: 767.98px) {
+        .nav-2 {
+            margin-top: 7.7rem!important;
+            width: max-content!important;
+            display: grid;
+            width: 100%!important;
+        }
+        .products.w-auto,
+        .store-location.w-auto {
+            width: 100% !important;
+            align-items: center!important;
+            padding: 0!important;
+            margin: 0!important;
+        }
+        .nav-2 .products {
+            width: 100%;
+        }
+        a.nav-link {
+            font-size: 2rem;
+        }
+        .store-address {
+            width: 100%;
+            text-align: center;
+        }
+        .lead-product {
+            font-size: 2rem;
+        }
+        .off,
+        .store-address .strong {
+            font-size: 1.7rem;
+        }
+        .store-address span.c-green {
+            font-size: 1.5rem;
+        }
+        .cc-img {
+            height: 9.5rem;
+        }
+        .price p del,
+        .shop-by-category strong {
+            font-size: 2.2rem;
+        }
+        .view-all-btn {
+            width: 12.375rem;
+            height: 100%;
+            font-size: 1.7rem;
+        }
+        .feature-card-name {
+            font-size: 2.4rem;
+        }
+        .price p strong,
+        .feature-item {
+            font-size: 2.5rem;
+        }
+        .item-details li img {
+            width: 2.8rem;
+        }
+        .add-cart-btn img {
+            width: 3.313rem;
+        }
+        .order-btn {
+            font-size: 2rem;
+            width: 80px;
+        }
+        .add-cart-btn {
+            font-size: 2.5rem;
+            width: 60%;
+        }
+        .item-pic {
+            width: 17.938rem;
+            height: 17.938rem;
+        }
+        .footer .h5,
+        .date,
+        .user {
+            font-size: 1.8rem;
+        }
+        .story-item-data {
+            font-size: 3rem;
+        }
+        .review {
+            font-size: 2.3rem;
+        }
+        a.read-more:link,
+        a.read-more:visited {
+            font-size: 2rem;
+        }
+        .stories .card-title {
+            font-size: 2rem;
+            font-weight: 500;
+        }
+        .data-search {
+            font-size: 1.6rem;
+        }
+        .footer-brand {
+            display: flex !important;
+            justify-content: center;
+        }
+        .footer ul.card li a {
+            display: flex!important;
+            justify-content: center;
+        }
+        .footer ul.list-unstyled li {
+            display: flex!important;
+            justify-content: center;
+        }
+        .app-redirects-logos {
+            margin: 0 auto!important;
+        }
+        .footer .h5 {
+            font-size: 1.8rem;
+        }
+        .footer a {
+            font-size: 1.5rem;
+        }
+        .arrow {
+            display: none;
+        }
     }
-    .off {
-        font-size: 2.275rem;
+    
+    @media (max-width: 575.98px) {
+        .footer-brand img,
+        .navbar-brand img {
+            width: 25vw;
+        }
+        .nav-2 {
+            margin-top: 12rem !important;
+            margin-left: 0px!important;
+            margin-right: 0px!important;
+        }
+        /* .mx-5 {
+            margin: 2.5px !important;
+        } */
+        .off,
+        .store-address .strong,
+        a.nav-link {
+            font-size: 2.5rem;
+        }
+        .store-address span.c-green {
+            font-size: 2.5rem;
+        }
+        .cc-img {
+            height: 15.5rem;
+        }
+        .price p del,
+        .shop-by-category strong {
+            font-size: 3.2rem;
+        }
+        .feature-card-name {
+            font-size: 2.8rem;
+        }
+        .price p strong,
+        .feature-item {
+            font-size: 4rem;
+            letter-spacing: .6px;
+        }
+        .order-btn {
+            font-size: 2.6rem;
+            width: 50px;
+        }
+        .green,
+        h4 {
+            font-size: 6.125rem;
+        }
+        .view-all-btn {
+            width: 16.375rem;
+            font-size: 2.7rem;
+        }
+        .special-offer em {
+            font-size: 2.875rem;
+        }
+        .lead-product {
+            font-size: 2.7rem;
+        }
+        .review,
+        .footer .h5,
+        .date,
+        .user {
+            font-size: 3rem;
+        }
+        .story-item-data {
+            font-size: 3.6rem;
+        }
+        a.read-more:link,
+        a.read-more:visited {
+            font-size: 3rem;
+        }
+        .stories .card-title {
+            font-size: 3rem;
+        }
+        .data-search {
+            font-size: 3rem;
+        }
+        .footer a {
+            font-size: 2rem;
+        }
+        .join-links {
+            width: 3.354vw;
+        }
+        .copyright {
+            font-size: 2.3rem;
+        }
     }
-    .feature-card-name {
-        font-size: 2.8rem;
-    }
-    .price p strong,
-    .feature-item {
-        font-size: 2.875rem;
-    }
-    .store-address p.text-muted {
-        font-size: 2rem;
-    }
-    .store-address a.strong,
-    .store-address a span.c-green {
-        font: normal normal normal 2rem/1rem "Poppins";
-    }
-    .search input[type="text"],
-    .search input[placeholder],
-    .nav-link p,
-    .nav-items a,
-    .location p,
-    .store-address a.strong span.c-green {
-        font-size: 2rem;
-    }
-    header .d-block {
-        width: 50% !important;
-        font-size: 2.143vw !important;
-    }
-    header .d-block p.bold,
-    header .d-block p span.sale {
-        font-size: 2.5vw !important;
-    }
-    header .d-block p {
-        font-size: 2.143vw !important;
-    }
-    .view-all-btn {
-        width: 12.375rem;
-        font-size: 2.125rem;
-        padding: 5px;
-    }
-    li.price p strong,
-    li.feature-item {
-        font-size: 3rem;
-    }
-    li.price p del {
-        font-size: 2.5vw;
-    }
-    ul.item-details li img {
-        width: 2.5vw;
-    }
-    button.add-cart-btn {
-        font: normal normal 500 1.8rem "Poppins";
-        background-color: #ffbb44;
-        width: 20vw;
-    }
-    button.add-cart-btn img {
-        width: 2.013rem;
-    }
-    h4 {
-        font: normal normal bold 4.125rem "Poppins";
-    }
-    .date,
-    .user {
-        font: normal normal 400 1.833vw "Poppins";
-    }
-    .review {
-        font: normal normal 400 2vw "Poppins";
-    }
-    p.story-item-data {
-        font-size: 2.5vw;
-    }
-    a.read-more:link,
-    a.read-more:visited {
-        font: normal normal 500 1.938vw "Poppins";
-    }
-    .stories p.card-title {
-        font-size: 2rem;
-    }
-    .data-search {
-        width: 100%;
-        font: normal normal normal 1.8rem "Poppins";
-    }
-    footer .footer a {
-        font-size: 1.8rem;
-        width: 200%;
-    }
-    div.h5 {
-        font-size: 2rem;
-    }
-    .footer ul li img {
-        height: 2vw;
-    }
-    .join-links {
-        width: 4vw;
-    }
-    .copyright {
-        font: normal normal normal 2vw/19px "Poppins";
-    }
-}
-
-
-/* // `md` applies to small devices (landscape phones, less than 768px) */
-
-@media (max-width: 767.98px) {
-    * {
-        font-size: 2.083vw;
-    }
-    .nav-1 div.navbar-expand-md {
-        width: 74%;
-        display: flex;
-        justify-content: end;
-    }
-    .nav-2 div.navbar-expand-md {
-        width: 33%;
-        display: flex;
-        justify-content: end;
-    }
-    .arrow {
-        display: none !important;
-    }
-    .search input {
-        width: 22rem !important;
-    }
-    .footer-brand img,
-    .navbar-brand img {
-        width: 22.875vw;
-    }
-    .store-location img {
-        width: 3.357vw;
-        height: 3.357vw;
-    }
-    .store-address img,
-    .down-arrow-black-btn {
-        width: 1rem;
-    }
-    .store-address .text-muted {
-        font-size: 1rem;
-    }
-    .store-address .strong {
-        font: normal normal normal 1.5rem/1rem "Poppins";
-    }
-    .search input[type="text"],
-    .search input[placeholder],
-    .nav-link p,
-    .nav-items a,
-    .location p,
-    .store-address .strong .c-green {
-        font-size: 1.1vw;
-    }
-}
-
-
-/* // `lg` applies to medium devices (tablets, less than 992px) */
-
-@media (max-width: 991.98px) {
-    * {
-        font-size: 1.613vw;
-    }
-    form .search input[type="text"],
-    form .search input[placeholder] {
-        font-size: 1.1vw;
-    }
-    .nav-items a.nav-link,
-    .location p,
-    .store-address .strong .c-green {
-        font-size: 1.1vw;
-    }
-}
-
-
-/* // `xl` applies to large devices (desktops, less than 1200px) */
-
-@media (max-width: 1199.98px) {
-    * {
-        font-size: 1.333vw;
-    }
-}
-
-
-/* // `xxl` applies to x-large devices (large desktops, less than 1400px) */
-
-@media (max-width: 1399.98px) {
-    * {
-        font-size: 1.143vw;
-    }
-    span.sale,
-    header p.bold {
-        font-size: 2.859vw;
-    }
-    .search input[type="text"],
-    .search input[placeholder],
-    .nav-link p,
-    .nav-items a,
-    .location p,
-    .store-address .strong .c-green {
-        font-size: 0.915vw;
-    }
-    .ad-side-pic {
-        right: -5%;
-    }
-    .arrow {
-        top: 40%;
-    }
-    .shop-by-category .back {
-        left: 1.5%;
-    }
-    .shop-by-category .forward {
-        right: 1.5%;
-    }
-    .item-pic img {
-        width: 90%;
-        height: 90%;
-    }
-    .price p strong,
-    .feature-item {
-        font-size: 1.25rem;
-    }
-    .item-details li img {
-        width: 1.144vw;
-    }
-    .price p del {
-        font-size: 1.144vw;
-    }
-    .add-cart-btn {
-        width: 15.011vw;
-    }
-    .special-offer em {
-        font-size: 1.544vw;
-    }
-    .offer-percentage,
-    .offer-product {
-        font-size: 3.018vw;
-    }
-    .top-brands li {
-        width: 6.375rem;
-        padding: .25rem auto;
-    }
-    .story-item-data {
-        font-size: 1.2vw;
-    }
-    .footer a {
-        font-size: 0.8vw;
-    }
-}
